make sure the hidden input isn't off screen

--- a/src/components/Radio.scss
+++ b/src/components/Radio.scss
@@ -1,9 +1,12 @@
 @import "~@nti/style-common";
 
 label.radio-component {
+	position: relative;
+
 	input[type=radio] {
 		opacity: 0;
 		position: absolute;
+		top: 0;
 
 		& + span.label {
 			position: relative;
@@ -21,6 +24,7 @@ label.radio-component {
 				width: 1rem;
 				height: 1rem;
 				background: transparent center/100% no-repeat;
+
 				@include retina-asset('./assets/radio/base', $xCount: 3);
 			}
 		}
@@ -38,7 +42,7 @@ label.radio-component {
 		}
 	}
 
-	input + span.label,
+	input[type=radio] + span.label,
 	div.sub {
 		margin-left: 1.625rem;
 	}
